--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,11 @@
     "init-db": "node db/initDb.js"
   },
   "dependencies": {
-    "@ngrok/ngrok": "^1.5.2",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.1"
   },
   "devDependencies": {
